# Nakul

./: README.md  install.sh  prompt1.md  pyproject.toml  requirements.txt
nakul/: __init__.py  auth.py  config.py  database.py  main.py  models.py
nakul/api/: __init__.py  router.py
nakul/collectors/: __init__.py  base.py  cpanel_collector.py  database_collector.py  log_collector.py  service_collector.py  system_collector.py
nakul/correlation/: __init__.py  account_mapper.py  engine.py  patterns.py
nakul/dashboard/static/css/: style.css
nakul/dashboard/static/js/: app.js
nakul/dashboard/templates/: alerts.html  backups.html  base.html  database.html  incidents.html  login.html  logs.html  resources.html  security.html  services.html  settings.html  summary.html
nakul/incidents/: __init__.py  dedup.py  engine.py  rules.py
nakul/notifiers/: __init__.py  base.py
nakul/parsers/: __init__.py  apache_parser.py  backup_parser.py  base.py  cpanel_parser.py  mysql_parser.py  security_parser.py  system_parser.py  wptoolkit_parser.py
nakul/plugins/: __init__.py  base.py
systemd/: nakul.service
tests/: test_incidents.py  test_parsers.py
