[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nakul"
version = "1.0.0"
description = "Server Intelligence & Protection Platform for cPanel/WHM Hosting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Nakul Project"}
]

[project.scripts]
nakul = "nakul.main:main"

[tool.setuptools.packages.find]
include = ["nakul*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
